<resources>
    <string name="app_name">你好世界</string>
    <string name="hello_icon">Android Q</string>
    <string name="hello_text">你好，世界</string>
    <string name="text">文本</string>
    <string name="test">测试</string>
    <string name="logo">Android</string>
    <string name="userNameHint">手机号/邮箱</string>
    <string name="passwordHint">登录密码</string>
    <string name="login">登录</string>
    <string name="taobao_login">淘宝账户登录</string>
    <string name="forget_password">忘记密码？</string>
    <string name="register">注册</string>
    <string name="nine_tail_fox">九尾妖狐</string>
    <string name="ali">阿狸</string>
    <string name="magician">法师</string>
    <string name="assassin">刺客</string>
    <string name="ad">物理攻击</string>
    <string name="ap">魔法攻击</string>
    <string name="defense">防御能力</string>
    <string name="difficulty">上手难度</string>
    <string name="button_left">左边</string>
    <string name="button_right">右边</string>
    <string name="button_switch">开关</string>
    <string name="edit_number">输入数值</string>
    <string name="button_ok">确定</string>
    <string name="radio_android">Android</string>
    <string name="radio_apple">Apple</string>
    <string name="java">Java</string>
    <string name="sql">SQL</string>
    <string name="open">开</string>
    <string name="close">关</string>
    <string name="appraise">星评价</string>
    <string name="ok_hint">请先填写数值，再点击确定</string>
    <string name="register_name">昵称</string>
    <string name="man">男</string>
    <string name="women">女</string>
    <string name="passwordHintOk">确认密码</string>
    <string name="register_sms">接收消息推送</string>
    <string name="protocol">同意本软件的用户服务协议和隐私政策</string>
    <string name="phone">手机号码</string>
    <string name="sex">性别</string>
    <string name="welcome">你好，欢迎使用~</string>
    <string name="reset_pwd">重置密码</string>
    <string name="update_pwd">更新密码</string>
    <string name="new_pwd">新密码</string>
</resources>
