<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPwdActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:contentDescription="@string/register"
            app:srcCompat="@drawable/ic_reset_pwd" />

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:drawableStart="@drawable/username"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/register_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:maxLength="20" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/register"
                app:srcCompat="@drawable/sex" />

            <RadioGroup
                android:id="@+id/radio_group_sex"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_man"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/man" />

                <RadioButton
                    android:id="@+id/radio_women"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/women" />
            </RadioGroup>
        </LinearLayout>


        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:drawableStart="@drawable/phone"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/phone"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:maxLength="11" />

        <Button
            android:id="@+id/button_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/reset_pwd" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>